--- a/client/src/components/UI/AddTaskForm/AddTaskForm.css
+++ b/client/src/components/UI/AddTaskForm/AddTaskForm.css
@@ -34,16 +34,18 @@
     width: 460px;
     margin: 20px auto;
 }
-.add-task-form input {
+.add-task-form textarea {
     display: inline-block;
+    resize: none;
+    overflow: auto;
     box-sizing: border-box;
     border: 1px solid #bebebe;
     border-radius: 5px;
     height: 60px;
-    padding: 15px;
+    padding: 10px;
     margin-bottom: 15px;
 }
-.add-task-form input:hover {
+.add-task-form textarea:hover {
     border: 1px solid black;
 }
 .add-task-form .description {
