--- a/client/src/components/UI/EditTaskForm/EditTaskForm.css
+++ b/client/src/components/UI/EditTaskForm/EditTaskForm.css
@@ -34,8 +34,10 @@
     width: 460px;
     margin: 20px auto;
 }
-.edit-task-form input {
+.edit-task-form textarea {
     display: inline-block;
+    resize: none;
+    overflow: auto;
     box-sizing: border-box;
     border: 1px solid #bebebe;
     border-radius: 5px;
@@ -43,7 +45,7 @@
     padding: 15px;
     margin-bottom: 15px;
 }
-.edit-task-form input:hover {
+.edit-task-form textarea:hover {
     border: 1px solid black;
 }
 .edit-task-form .description {
