--- a/client/src/components/UI/TaskForm/TaskForm.css
+++ b/client/src/components/UI/TaskForm/TaskForm.css
@@ -10,7 +10,7 @@
     background-color: rgba(0, 0, 0, .2);
     z-index: 90;
 }
-.add-task-form {
+.task-form {
     position: absolute;
     left: auto;
     top: auto;
@@ -20,7 +20,7 @@
     border-radius: 5px;
     z-index: 100;
 }
-.add-task-form .head {
+.task-form .head {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,11 +30,11 @@
     border-top-right-radius: 5px;
     border-bottom: 1px solid #B8B8B8;
 }
-.add-task-form form {
+.task-form form {
     width: 460px;
     margin: 20px auto;
 }
-.add-task-form textarea {
+.task-form textarea {
     display: inline-block;
     resize: none;
     overflow: auto;
@@ -45,14 +45,14 @@
     padding: 10px;
     margin-bottom: 15px;
 }
-.add-task-form textarea:hover {
+.task-form textarea:hover {
     border: 1px solid black;
 }
-.add-task-form .description {
+.task-form .description {
     width: 68%;
     margin-right: 2%;
 }
-.add-task-form .time {
+.task-form .time {
     width: 30%;
     font-size: 30px;
     text-align: right;
