configured timesheets and their routes, configured archiving, edited dependent components, added reducers

--- a/client/src/pages/TimePage/Archive/Archive.css
+++ b/client/src/pages/TimePage/Archive/Archive.css
@@ -22,6 +22,7 @@
 }
 .archive .archive-item {
     padding: 10px 0;
+    padding-left: 10px;
     margin: 10px 0;
 }
 .archive .archive-item button {
