--- a/client/src/components/UI/Message/Message.css
+++ b/client/src/components/UI/Message/Message.css
@@ -11,6 +11,9 @@
 .message.edit-user-page {
     width: 60%;
 }
+.message.main-table-page {
+    width: 380px;
+}
 .message p {
     padding: 5px 10px;
     border-radius: 5px;
