--- a/client/src/pages/TimePage/Archive/Archive.css
+++ b/client/src/pages/TimePage/Archive/Archive.css
@@ -21,16 +21,19 @@
     margin: 0;
 }
 .archive .archive-item {
-    padding: 10px 0;
-    padding-left: 10px;
     margin: 10px 0;
+}
+.archive .archive-item .buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
 }
 .archive .archive-item button {
     color: blue;
     text-decoration: underline;
     background-color: transparent;
     border: none;
-    margin-left: 10px;
+    padding: 0;
     cursor: pointer;
 }
 .archive .archive-item button:hover {
