--- a/client/src/pages/TimePage/Archive/Archive.css
+++ b/client/src/pages/TimePage/Archive/Archive.css
@@ -4,6 +4,7 @@
     margin-bottom: 200px;
 }
 .archive .header {
+    display: flex;
     padding-left: 10px;
     margin: 20px 0;
 }
@@ -26,6 +27,9 @@
 .archive .archive-item .buttons {
     display: flex;
     justify-content: space-between;
+    padding: 10px;
+}
+.archive .archive-item p {
     padding: 10px;
 }
 .archive .archive-item button {
