--- a/client/src/pages/TimePage/MainTable/MainTableDays/DayTotal/DayTotal.css
+++ b/client/src/pages/TimePage/MainTable/MainTableDays/DayTotal/DayTotal.css
@@ -6,3 +6,12 @@
     padding-top: 4px;
     padding-right: 8px;
 }
+
+@media screen and (max-width: 800px) {
+    .day-total {
+        width: 78px;
+        height: 25px;
+        padding-top: 2px;
+        padding-right: 4px;
+    }
+}
