--- a/client/src/components/EmptyItem/EmptyItem.css
+++ b/client/src/components/EmptyItem/EmptyItem.css
@@ -7,3 +7,9 @@
     background-color: #f0f0f0;
     color: rgb(88, 88, 88);
 }
+
+@media screen and (max-width: 800px) {
+    .empty-item {
+        height: 125px;
+    }
+}
