--- a/client/src/components/UI/AuthForm/AuthForm.css
+++ b/client/src/components/UI/AuthForm/AuthForm.css
@@ -46,3 +46,25 @@
     width: 450px;
     margin: 15px;
 }
+
+@media screen and (max-width: 800px) {
+    .auth-form {
+        padding: 15px;
+        margin: 5px 0;
+    }
+    .auth-form input {
+        border-radius: 3px;
+        width: 225px;
+        height: 20px;
+        padding: 7px;
+        margin-bottom: 7px;
+    }
+    .auth-form .links {
+        width: 225px;
+        margin-top: 10px;
+    }
+    .auth-form .demiliter {
+        width: 225px;
+        margin: 7px;
+    }
+}
