--- a/client/src/components/UI/TaskForm/TaskForm.css
+++ b/client/src/components/UI/TaskForm/TaskForm.css
@@ -57,3 +57,29 @@
     font-size: 30px;
     text-align: right;
 }
+
+@media screen and (max-width: 800px) {
+    .task-form {
+        width: 255px;
+        height: 160px;
+        border-radius: 3px;
+    }
+    .task-form .head {
+        height: 20px;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+    }
+    .task-form form {
+        width: 230px;
+        margin: 10px auto;
+    }
+    .task-form textarea {
+        border-radius: 3px;
+        height: 30px;
+        padding: 5px;
+        margin-bottom: 7px;
+    }
+    .task-form .time {
+        font-size: 15px;
+    }
+}
