--- a/client/src/pages/ProjectsPage/ProjectsPage.css
+++ b/client/src/pages/ProjectsPage/ProjectsPage.css
@@ -30,6 +30,9 @@
     height: 20px;
     margin: 0 10px;
 }
+.projects .empty-project {
+    padding: 10px;
+}
 .projects .demiliter {
     margin-bottom: 20px;
 }
@@ -75,4 +78,41 @@
     width: 100%;
     padding: 150px 0;
     margin-top: 20px;
+}
+
+@media screen and (max-width: 800px) {
+    .projects {
+        width: 500px;
+    }
+    .projects button.new {
+        width: 100px;
+        height: 20px;
+        border-radius: 4px;
+        margin: 5px 0;
+    }
+    .projects button.new img {
+        width: 10px;
+        height: 10px;
+        margin: 0 5px;
+    }
+    .projects .empty-project {
+        padding: 5px;
+    }
+    .projects .demiliter {
+        margin-bottom: 10px;
+    }
+    .projects-header {
+        height: 20px;
+    }
+    .projects-header img {
+        width: 12px;
+        height: 12px;
+    }
+    .projects li {
+        padding: 0 5px;
+    }
+    .projects-loader {
+        padding: 75px 0;
+        margin-top: 10px;
+    }
 }
