--- a/client/src/pages/TimePage/Archive/Archive.css
+++ b/client/src/pages/TimePage/Archive/Archive.css
@@ -49,3 +49,31 @@
 .archive .archive-item .demiliter {
     margin: 5px 0;
 }
+
+@media screen and (max-width: 800px) {
+    .archive {
+        width: 400px;
+        margin-bottom: 100px;
+    }
+    .archive .header {
+        padding-left: 5px;
+        margin: 10px 0;
+    }
+    .archive .head-item {
+        padding: 5px 0;
+        padding-left: 5px;
+        margin: 5px 0;
+    }
+    .archive .archive-item {
+        margin: 5px 0;
+    }
+    .archive .archive-item .buttons {
+        padding: 5px;
+    }
+    .archive .archive-item p {
+        padding: 5px;
+    }
+    .archive .archive-item .demiliter {
+        margin: 2px 0;
+    }
+}
