--- a/client/src/pages/TimePage/MainTable/MainTable.css
+++ b/client/src/pages/TimePage/MainTable/MainTable.css
@@ -2,3 +2,9 @@
     flex-grow: 1;
     padding-top: 32px;
 }
+
+@media screen and (max-width: 800px) {
+    .main-table {
+        padding-top: 16px;
+    }
+}
