--- a/client/src/pages/TimePage/MainTable/MainTableDays/MainTableDays.css
+++ b/client/src/pages/TimePage/MainTable/MainTableDays/MainTableDays.css
@@ -3,3 +3,9 @@
     flex-grow: 1;
     margin-top: 10px;
 }
+
+@media screen and (max-width: 800px) {
+    .main-table-days {
+        margin-top: 5px;
+    }
+}
