--- a/client/src/pages/TimePage/MainTable/MainTableHeader/TableHeaderLeft/TableHeaderLeft.css
+++ b/client/src/pages/TimePage/MainTable/MainTableHeader/TableHeaderLeft/TableHeaderLeft.css
@@ -12,3 +12,9 @@
     color: blue;
     cursor: pointer;
 }
+
+@media screen and (max-width: 800px) {
+    .table-header-left p {
+        margin-right: 4px;
+    }
+}
