--- a/client/src/pages/TimePage/MainTable/MainTableItems/TableItem/TableItemRight/TableItemRight.css
+++ b/client/src/pages/TimePage/MainTable/MainTableItems/TableItem/TableItemRight/TableItemRight.css
@@ -7,3 +7,12 @@
 .table-item-right .btn {
     margin-left: 16px;
 }
+
+@media screen and (max-width: 800px) {
+    .table-item-right {
+        padding-right: 8px;
+    }
+    .table-item-right .btn {
+        margin-left: 8px;
+    }
+}
