--- a/client/src/pages/TimePage/Tabs/TabItem/TabItem.css
+++ b/client/src/pages/TimePage/Tabs/TabItem/TabItem.css
@@ -16,3 +16,17 @@
 .tab-item a.active {
     border-bottom: 3px solid #CE6AFD;
 }
+
+@media screen and (max-width: 800px) {
+    .tab-item a {
+        height: 25px;
+        padding: 0 7px;
+        padding-top: 7px;
+    }
+    .tab-item a:hover {
+        border-bottom: 2px solid #CE6AFD;
+    }
+    .tab-item a.active {
+        border-bottom: 2px solid #CE6AFD;
+    }
+}
