--- a/client/src/style/fonts.css
+++ b/client/src/style/fonts.css
@@ -39,3 +39,21 @@
     text-decoration: underline;
     cursor: pointer;
 }
+
+@media screen and (max-width: 800px) {
+    .text {
+        font-size: 9px;
+    }
+    .size-16 {
+        font-size: 8px;
+    }
+    .size-20 {
+        font-size: 10px;
+    }
+    .size-22 {
+        font-size: 12px;
+    }
+    .size-30 {
+        font-size: 14px;
+    }
+}
