--- a/client/src/components/UI/Message/Message.css
+++ b/client/src/components/UI/Message/Message.css
@@ -16,6 +16,9 @@
 .message.main-message {
     width: 340px;
 }
+.message.permanent {
+    height: 36px;
+}
 .message p {
     padding: 5px 10px;
     border-radius: 5px;
