--- a/client/src/pages/TimePage/MainTable/MainTable.css
+++ b/client/src/pages/TimePage/MainTable/MainTable.css
@@ -1,10 +1,10 @@
 .main-table {
     flex-grow: 1;
-    padding-top: 32px;
+    /* padding-top: 32px; */
 }
 
 @media screen and (max-width: 800px) {
     .main-table {
-        padding-top: 16px;
+        /* padding-top: 16px; */
     }
 }
