--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -7,6 +7,9 @@
     margin: 0 auto;
     width: 1100px;
 }
+.permanent-message {
+    height: 36px;
+}
 .demiliter {
     margin: 0;
     color: #B8B8B8;
@@ -18,5 +21,8 @@ p {
 @media screen and (max-width: 800px) {
     .container {
         max-width: 768px;
+    }
+    .permanent-message {
+        height: 18px;
     }
 }
