--- a/client/src/pages/ProjectsPage/ProjectItem/ProjectItem.css
+++ b/client/src/pages/ProjectsPage/ProjectItem/ProjectItem.css
@@ -10,7 +10,7 @@
     width: 100%;
     margin-top: 10px;
 }
-.projects ul.tasks-list {
+.projects ul.task-list {
     align-items: flex-start;
     flex-direction: column;
     margin: 0;
